--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 10:39:00 AM</p>
+    <p class="lastupdate">09/06/2020 10:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.3&#176;F</td>
+        <td class="data">91.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.3&#176;F</td>
+        <td class="data">91.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.3&#176;F</td>
+        <td class="data">91.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.5&#176;F</td>
+        <td class="data">55.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.935 inHg (-0.010)</td>
+        <td class="data">29.935 inHg (-0.008)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">3 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.9&#176;F</td>
+        <td class="data">82.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:38:24 AM">
-            91.4</span><br/>
+          <span title="10:42:42 AM">
+            91.9</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:38:24 AM (Sunday)">
-            91.4</span><br/>
+          <span title="10:42:42 AM (Sunday)">
+            91.9</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:38:24 AM" class="hival">
-            91.4</span>
+          <span title="10:42:42 AM" class="hival">
+            91.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:38:24 AM (Sunday)" class="hival">
-            91.4</span>
+          <span title="10:42:42 AM (Sunday)" class="hival">
+            91.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:23:24 AM">
-            54.8</span><br/>
+          <span title="10:43:32 AM">
+            55.1</span><br/>
           <span title="12:02:45 AM">
             44.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:23:24 AM (Sunday)">
-            54.8</span><br/>
+          <span title="10:43:32 AM (Sunday)">
+            55.1</span><br/>
           <span title="12:02:45 AM (Sunday)">
             44.8</span>
         </td>
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="10:10:42 AM">
-            7</span><br/>
-          19
+          <span title="10:42:02 AM">
+            8</span><br/>
+          15
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:10:42 AM (Sunday)">
-            7</span><br/>
-          19
+          <span title="10:42:02 AM (Sunday)">
+            8</span><br/>
+          15
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 01:02:40 PM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          348
+          349
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          348
+          349
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 19 hours, 52 minutes</td>
+      <td class="data">4 days, 19 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 19 hours, 52 minutes</td>
+      <td class="data">4 days, 19 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
