--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 10:44:00 AM</p>
+    <p class="lastupdate">09/06/2020 10:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.9&#176;F</td>
+        <td class="data">92.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.9&#176;F</td>
+        <td class="data">92.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.9&#176;F</td>
+        <td class="data">92.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.1&#176;F</td>
+        <td class="data">54.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">28%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.935 inHg (-0.008)</td>
+        <td class="data">29.932 inHg (-0.012)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNW (338&#176;)</td>
+        <td class="data">4 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:42:42 AM">
-            91.9</span><br/>
+          <span title="10:49:00 AM">
+            92.7</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:42:42 AM (Sunday)">
-            91.9</span><br/>
+          <span title="10:49:00 AM (Sunday)">
+            92.7</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:42:42 AM" class="hival">
-            91.9</span>
+          <span title="10:49:00 AM" class="hival">
+            92.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:42:42 AM (Sunday)" class="hival">
-            91.9</span>
+          <span title="10:49:00 AM (Sunday)" class="hival">
+            92.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -235,13 +235,13 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:43:32 AM">
+          <span title="10:44:44 AM">
             55.1</span><br/>
           <span title="12:02:45 AM">
             44.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:43:32 AM (Sunday)">
+          <span title="10:44:44 AM (Sunday)">
             55.1</span><br/>
           <span title="12:02:45 AM (Sunday)">
             44.8</span>
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="10:42:02 AM">
-            8</span><br/>
-          15
+          <span title="10:45:58 AM">
+            9</span><br/>
+          346
         </td>
         <td class="data new_row hilo_week">
-          <span title="10:42:02 AM (Sunday)">
-            8</span><br/>
-          15
+          <span title="10:45:58 AM (Sunday)">
+            9</span><br/>
+          346
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 01:02:40 PM">
@@ -439,12 +439,12 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          0<br/>
-          349
+          1<br/>
+          350
         </td>
         <td class="data new_row hilo_week">
-          0<br/>
-          349
+          1<br/>
+          350
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 19 hours, 57 minutes</td>
+      <td class="data">4 days, 20 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 19 hours, 57 minutes</td>
+      <td class="data">4 days, 20 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
