--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 11:14:00 AM</p>
+    <p class="lastupdate">09/06/2020 11:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">96.3&#176;F</td>
+        <td class="data">97.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">96.3&#176;F</td>
+        <td class="data">97.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">96.3&#176;F</td>
+        <td class="data">97.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.8&#176;F</td>
+        <td class="data">55.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">26%</td>
+        <td class="data">25%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.933 inHg (-0.013)</td>
+        <td class="data">29.932 inHg (-0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNW (338&#176;)</td>
+        <td class="data">4 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.5&#176;F</td>
+        <td class="data">82.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:13:36 AM">
-            96.3</span><br/>
+          <span title="11:18:34 AM">
+            97.2</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:13:36 AM (Sunday)">
-            96.3</span><br/>
+          <span title="11:18:34 AM (Sunday)">
+            97.2</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:13:36 AM" class="hival">
-            96.3</span>
+          <span title="11:18:34 AM" class="hival">
+            97.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:13:36 AM (Sunday)" class="hival">
-            96.3</span>
+          <span title="11:18:34 AM (Sunday)" class="hival">
+            97.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:03:52 AM">
-            55.8</span><br/>
+          <span title="11:16:30 AM">
+            56.2</span><br/>
           <span title="12:02:45 AM">
             44.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:03:52 AM (Sunday)">
-            55.8</span><br/>
+          <span title="11:16:30 AM (Sunday)">
+            56.2</span><br/>
           <span title="12:02:45 AM (Sunday)">
             44.8</span>
         </td>
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:12:31 AM">
             49</span><br/>
-          <span title="10:58:52 AM">
-            26</span>
+          <span title="11:16:48 AM">
+            25</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:12:31 AM (Sunday)">
             49</span><br/>
-          <span title="10:58:52 AM (Sunday)">
-            26</span>
+          <span title="11:16:48 AM (Sunday)">
+            25</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          353
+          354
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          353
+          354
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 20 hours, 27 minutes</td>
+      <td class="data">4 days, 20 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 20 hours, 27 minutes</td>
+      <td class="data">4 days, 20 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
