--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 11:29:00 AM</p>
+    <p class="lastupdate">09/06/2020 11:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">98.7&#176;F</td>
+        <td class="data">99.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">98.7&#176;F</td>
+        <td class="data">99.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">98.7&#176;F</td>
+        <td class="data">99.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.4&#176;F</td>
+        <td class="data">54.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.926 inHg (-0.019)</td>
+        <td class="data">29.924 inHg (-0.021)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph N (0&#176;)</td>
+        <td class="data">4 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.9&#176;F</td>
+        <td class="data">83.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -119,7 +119,7 @@
         <tr>
           <td class="label">Moon Phase</td>
           <td class="data">Waning gibbous<br/>
-            84%</td>
+            83%</td>
         </tr>
       </table>
     </div>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:28:28 AM">
-            98.7</span><br/>
+          <span title="11:33:56 AM">
+            99.3</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:28:28 AM (Sunday)">
-            98.7</span><br/>
+          <span title="11:33:56 AM (Sunday)">
+            99.3</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:28:28 AM" class="hival">
-            98.7</span>
+          <span title="11:33:56 AM" class="hival">
+            99.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:28:28 AM (Sunday)" class="hival">
-            98.7</span>
+          <span title="11:33:56 AM (Sunday)" class="hival">
+            99.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -421,9 +421,9 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          1</td>
+          2</td>
         <td class="data new_row hilo_week">
-          1</td>
+          2</td>
         <td class="data new_row hilo_month">
           3</td>
         <td class="data new_row hilo_year">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 20 hours, 42 minutes</td>
+      <td class="data">4 days, 20 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 20 hours, 42 minutes</td>
+      <td class="data">4 days, 20 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
