--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 11:54:00 AM</p>
+    <p class="lastupdate">09/06/2020 11:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">101.7&#176;F</td>
+        <td class="data">102.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">101.7&#176;F</td>
+        <td class="data">102.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">101.7&#176;F</td>
+        <td class="data">102.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.4&#176;F</td>
+        <td class="data">53.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">21%</td>
+        <td class="data">20%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.918 inHg (-0.030)</td>
+        <td class="data">29.916 inHg (-0.035)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">5 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.4&#176;F</td>
+        <td class="data">83.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:53:46 AM">
-            101.7</span><br/>
+          <span title="11:58:42 AM">
+            102.6</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:53:46 AM (Sunday)">
-            101.7</span><br/>
+          <span title="11:58:42 AM (Sunday)">
+            102.6</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:53:46 AM" class="hival">
-            101.7</span>
+          <span title="11:58:42 AM" class="hival">
+            102.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:53:46 AM (Sunday)" class="hival">
-            101.7</span>
+          <span title="11:58:42 AM (Sunday)" class="hival">
+            102.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:12:31 AM">
             49</span><br/>
-          <span title="11:45:52 AM">
-            21</span>
+          <span title="11:57:48 AM">
+            20</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:12:31 AM (Sunday)">
             49</span><br/>
-          <span title="11:45:52 AM (Sunday)">
-            21</span>
+          <span title="11:57:48 AM (Sunday)">
+            20</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          356
+          357
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          356
+          357
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">90%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 21 hours, 7 minutes</td>
+      <td class="data">4 days, 21 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 21 hours, 7 minutes</td>
+      <td class="data">4 days, 21 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
