--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/06/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">102.6&#176;F</td>
+        <td class="data">103.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">102.6&#176;F</td>
+        <td class="data">103.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">102.6&#176;F</td>
+        <td class="data">103.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.8&#176;F</td>
+        <td class="data">54.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.916 inHg (-0.035)</td>
+        <td class="data">29.918 inHg (-0.033)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph NNE (22&#176;)</td>
+        <td class="data">3 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.5&#176;F</td>
+        <td class="data">83.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:58:42 AM">
-            102.6</span><br/>
+          <span title="12:02:58 PM">
+            103.1</span><br/>
           <span title="07:04:11 AM">
             67.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:58:42 AM (Sunday)">
-            102.6</span><br/>
+          <span title="12:02:58 PM (Sunday)">
+            103.1</span><br/>
           <span title="07:04:11 AM (Sunday)">
             67.4</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:58:42 AM" class="hival">
-            102.6</span>
+          <span title="12:02:58 PM" class="hival">
+            103.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="11:58:42 AM (Sunday)" class="hival">
-            102.6</span>
+          <span title="12:02:58 PM (Sunday)" class="hival">
+            103.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM" class="hival">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">90%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 21 hours, 12 minutes</td>
+      <td class="data">4 days, 21 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 21 hours, 12 minutes</td>
+      <td class="data">4 days, 21 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
