--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/06/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,13 +84,13 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">102.6<br/>
-            <span class="timestamp">11:58:42 AM</span><br/>
+          <td class="data new_row">103.1<br/>
+            <span class="timestamp">12:02:58 PM</span><br/>
             67.4<br/>
             <span class="timestamp">07:04:11 AM</span>
           </td>
-          <td class="data new_row">102.6<br/>
-            <span class="timestamp">11:58:42 AM (Sunday)</span><br/>
+          <td class="data new_row">103.1<br/>
+            <span class="timestamp">12:02:58 PM (Sunday)</span><br/>
             67.4<br/>
             <span class="timestamp">07:04:11 AM (Sunday)</span>
           </td>
@@ -113,11 +113,11 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">102.6<br/>
-            <span class="timestamp">11:58:42 AM</span>
+          <td class="data new_row">103.1<br/>
+            <span class="timestamp">12:02:58 PM</span>
           </td>
-          <td class="data new_row">102.6<br/>
-            <span class="timestamp">11:58:42 AM (Sunday)</span>
+          <td class="data new_row">103.1<br/>
+            <span class="timestamp">12:02:58 PM (Sunday)</span>
           </td>
           <td class="data new_row">110.7<br/>
             <span class="timestamp">09/05/2020 03:12:38 PM</span>
